--- a/MilitaryRoboticSystemMaintenance.ipynb
+++ b/MilitaryRoboticSystemMaintenance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ea99c0f8",
    "metadata": {},
    "outputs": [
@@ -10,17 +10,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-08 20:28:33.232867: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-10-08 20:28:33.240804: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-10-08 20:28:33.262808: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-10-08 22:15:23.829684: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-10-08 22:15:23.836748: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-10-08 22:15:23.854114: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1759935513.299184   49106 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1759935513.309804   49106 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1759935513.339313   49106 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1759935513.339362   49106 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1759935513.339368   49106 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1759935513.339374   49106 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-10-08 20:28:33.348944: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1759941923.881630   64753 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1759941923.889313   64753 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1759941923.911620   64753 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1759941923.911660   64753 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1759941923.911665   64753 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1759941923.911668   64753 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-10-08 22:15:23.919195: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -37,8 +37,10 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import GRU, Dense, Dropout\n",
+    "from tensorflow.keras.layers import GRU, LSTM, Dense, Dropout, BatchNormalization, Bidirectional\n",
     "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+    "\n",
     "from sklearn.metrics import f1_score, accuracy_score"
    ]
   },
@@ -133,6 +135,7 @@
     "        plt.title('Receiver Operating Characteristic (ROC) Curve')\n",
     "        plt.legend(loc=\"lower right\")\n",
     "        plt.show()\n",
+    "\n",
     "    def verify_with_gru(self, X_train, X_test, y_train, y_test, epochs=30, batch_size=32):\n",
     "        X_test_rf = X_test\n",
     "        # 🔹 Reshape for GRU (3D)\n",
@@ -170,10 +173,23 @@
     "        print(f\"Random Forest - Accuracy: {rf_acc:.4f}, F1: {rf_f1:.4f}\")\n",
     "        print(f\"GRU Model     - Accuracy: {gru_acc:.4f}, F1: {gru_f1:.4f}\")\n",
     "        \n",
-    "        return {\n",
-    "            'random_forest': {'accuracy': rf_acc, 'f1': rf_f1},\n",
-    "            'gru': {'accuracy': gru_acc, 'f1': gru_f1}\n",
-    "        }\n",
+    "        # Display results\n",
+    "        print(\"\\n\" + \"=\" * 60)\n",
+    "        print(\"📊 FINAL MODEL COMPARISON\")\n",
+    "        print(\"=\" * 60)\n",
+    "        print(f\"Random Forest - Accuracy: {rf_acc:.4f} | F1: {rf_f1:.4f}\")\n",
+    "        print(f\"GRU Model - Accuracy: {gru_acc:.4f} | F1: {gru_f1:.4f}\")\n",
+    "        print(\"=\" * 60)\n",
+    "        \n",
+    "        # Determine winner\n",
+    "        if gru_acc > rf_acc:\n",
+    "            improvement = (gru_acc - rf_acc) * 100\n",
+    "            print(f\"🏆 GRU WINS by {improvement:.2f}% accuracy!\")\n",
+    "            print(f\"   F1 improvement: {(gru_f1 - rf_f1):.4f}\")\n",
+    "        elif rf_acc > gru_acc:\n",
+    "            print(f\"⚠️  Random Forest wins by {(rf_acc - gru_acc)*100:.2f}%\")\n",
+    "        else:\n",
+    "            print(\"🤝 Tie - Both models perform equally\")\n",
     "\n",
     "    def analyze_feature_importance(self):\n",
     "        importances = self.model.feature_importances_\n",
@@ -232,6 +248,14 @@
     "        labels=['Low', 'Medium', 'High'])})\n",
     "        return predictions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca73c054",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
